<resources>
    <string name="app_name">Fly.id</string>
    <string name="welcome_login_title">Hi, Berjumpa Lagi!</string>
    <string name="welcome_login_subtitle">Masuk dan Dapatkan Tiketnya!</string>
    <string name="email_login_title">Email</string>
    <string name="email_login_hint">Masukkan email pengguna</string>
    <string name="password_login_title">Kata Sandi</string>
    <string name="password_login_hint">Masukkan kata sandi</string>
    <string name="forgot_password_title">Lupa Kata Sandi?</string>
    <string name="login_btn_text">Masuk</string>
    <string name="register_text">Belum punya akun?</string>
    <string name="register_navigate">Daftar aja!</string>
    <string name="welcome_register_title">Yuk Buat Akun!</string>
    <string name="welcome_register_subtitle">Daftar dan Pesan Tiket Tinggal Klik!</string>
    <string name="name_register_title">Nama Lengkap</string>
    <string name="name_register_hint">Masukkan nama lengkap</string>
    <string name="email_register_hint">Masukkan email pengguna</string>
    <string name="phone_register_hint">Masukkan nomor ponsel</string>
    <string name="phone_register_title">Nomor Ponsel</string>
    <string name="login_text">Sudah punya akun nih?</string>
    <string name="login_navigate">Masuk aja!</string>
    <string name="register_btn_text">Daftar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_ticket_title">Tiket</string>
    <string name="menu_promo_title">Promo</string>
    <string name="menu_order_title">Pesanan</string>
    <string name="menu_profile_title">Profil</string>
    <string name="menu_popular_places">Tempat Populer</string>
    <string name="text_check_ticket">Cek Tiket</string>
    <string name="desc_message">Melihat pesan</string>
    <string name="desc_notification">Melihat notifikasi</string>
    <string name="text_pp">Pulang Pergi?</string>
    <string name="hint_departure">Asal</string>
    <string name="hint_arrival">Tujuan</string>
    <string name="desc_swap_ticket">Mengubah destinasi tiket</string>
    <string name="desc_pick_date">Memilih tanggal keberangatan</string>
    <string name="text_passenger">Penumpang</string>
    <string name="text_passenger_with_value">%1$d Penumpang</string>
    <string name="text_ticket_class">Kelas</string>
    <string name="text_search">Cari</string>
    <string name="text_latest_Search">Pencarian Terakhir</string>
    <string name="text_delete">Hapus</string>
    <string name="text_get_promo">Dapatkan Promo Terbaik</string>
    <string name="text_promo">Promo</string>
    <string name="desc_get_promo">Dapatkan promo lainnya</string>
    <string name="symbol_bullet">•</string>
    <string name="text_adult">Dewasa</string>
    <string name="text_adult_age">(12 thn ke atas)</string>
    <string name="text_child">Anak-anak</string>
    <string name="text_child_age">(2 - 11 thn)</string>
    <string name="text_baby">Bayi</string>
    <string name="text_baby_age"><![CDATA[(< 2 thn)]]></string>
    <string name="text_business">Bisnis</string>
    <string name="text_economic_premium">Ekonomi Premium</string>
    <string name="text_economic">Ekonomi</string>
    <string name="text_class_title">Kelas</string>
    <string name="text_main_class">Kelas Utama</string>
    <string name="text_search_title">Bandara atau Kota Populer</string>
    <string name="text_cancel">Batalkan</string>
    <string name="hint_search_airport">Cari Bandara atau Kota</string>
    <string name="login_failed_please_try_again">Login failed, please try again</string>
    <string name="email_tidak_boleh_kosong">Email tidak boleh kosong</string>
    <string name="password_tidak_boleh_kosong">Password tidak boleh kosong</string>
    <string name="password_minimal_8_karakter">Password minimal 8 karakter</string>
    <string name="login_berhasil">Login berhasil</string>
    <string name="error_password_special_char"><![CDATA["Password harus mengandung karakter khusus seperti:  (?=.*[@#$%^&+=!])\"] "]]></string>
    <string name="error_password_contain_digit">Password harus mengandung angka.</string>
    <string name="error_password_contain_small_case">Password harus mengandung huruf kecil.</string>
    <string name="error_password_contain_upper_case">Password harus mengandung huruf kapital.</string>
    <string name="error_password_length">Password harus minimal 8 karakter.</string>
    <string name="error_password_empty">Masukkan kata sandi</string>
    <string name="error_phone_empty">Masukkan nomor telepon</string>
    <string name="error_name_empty">Masukkan nama</string>
    <string name="error_date_empty">Masukkan tanggal lahir</string>
    <string name="error_email_empty">Masukkan email yang valid</string>
    <string name="error_check_empty">Centang salah satu kotak ini</string>
    <string name="error_empty_field">Isi semua kolom isian</string>
    <string name="register_success">Register berhasil, saatnya verifikasi email kamu</string>
    <string name="text_submit">Submit</string>
    <string name="text_forgot_password_subtitle">Masukkan alamat email yang terhubung dengan akun anda.</string>
    <string name="text_forgot_password_title">Lupa Kata Sandi?</string>
    <string name="text_ya">Ya</string>
    <string name="text_batal">Batal</string>
    <string name="text_pilih_tanggal">Pilih tanggal</string>
    <string name="text_no_history_searching">Yahh, belum ada riwayat pencarian</string>
    <string name="passenger_total">%1$d Penumpang</string>
    <string name="text_get_notification">Dapatkan Notifikasi</string>
    <string name="text_ticket_type">Jenis Tiket</string>
    <string name="text_cabin_item">Bagasi kabin 1 item (%1$d kg)</string>
    <string name="text_cabin_item_2">Bagasi 1 item (%1$d kg)</string>
    <string name="text_meal">Terdapat makanan di pesawat</string>
    <string name="text_no_meal">Tanpa makanan di pesawat</string>
    <string name="text_assurance">Menggunakan Asuransi perjalanan</string>
    <string name="text_no_assurance">Tanpa asuransi perjalanan</string>
    <string name="text_entertainment">Terdapat hiburan di pesawat</string>
    <string name="text_no_entertainment">Tanpa hiburan di pesawat</string>
    <string name="text_usb">Terdapat stopkontak atau USB</string>
    <string name="text_no_usb">Tanpa stopkontak atau USB</string>
    <string name="text_wifi">Terdapat wifi</string>
    <string name="text_no_wifi">Tanpa wifi</string>
    <string name="text_reschedule">Reschedule</string>
    <string name="text_reschedule_available">Bisa reschedule</string>
    <string name="text_reschedule_not_available">Tidak bisa reschedule</string>
    <string name="text_refund_up_to">Bisa refund %1$d%%</string>
    <string name="text_refund_not_available">Tidak bisa refund</string>
    <string name="text_refund">Refund</string>
    <string name="text_total_price_person">Harga total untuk %1$d orang</string>
    <string name="text_total_price">Rp%1$s</string>
    <string name="text_total_price_with_space">Rp %1$d</string>
    <string name="text_total_price_with_multiply">Rp%1$s x %2$d</string>
    <string name="text_total_price_with_discount">-Rp%1$s</string>
    <string name="text_total_price_with_slash">Rp%s/</string>
    <string name="text_lanjut">Lanjut</string>
    <string name="text_reset_password_title">Konfirmasi Kode OTP</string>
    <string name="text_reset_password_subtitle">Masukkan kode OTP yang sudah dikirimkan ke alamat email %1$s</string>
    <string name="text_konfirmasi">Konfirmasi</string>
    <string name="text_ask_confirmation">Belum dapat kode konfirmasi?</string>
    <string name="text_resend_otp">Kirim ulang</string>
    <string name="text_new_password_title">Kata Sandi Baru</string>
    <string name="text_new_password_subtitle">Masukkan kata sandi baru Anda, pastikan kata sandi mudah diingat ya!</string>
    <string name="text_repeat_password">Ulangi Kata Sandi</string>
    <string name="text_enter_new_password">Masukkan password baru</string>
    <string name="text_repeat_new_password">Ulangi password baru</string>
    <string name="text_new_password_dialog_title">Kata sandi sudah diperbarui</string>
    <string name="text_new_password_dialog_subtitle">Ayo pesan tiket sekarang!</string>
    <string name="text_logout">Keluar</string>
    <string name="text_logout_dialog_title">Apakah anda yakin ingin keluar dari akun?</string>
    <string name="error_password_not_same">Password tidak sama</string>
    <string name="toast_otp_sent">Kode OTP telah di kirim, silahkan cek email anda dan masukkan kode OTP untuk reset password</string>
    <string name="text_edit_profil">Edit Profil</string>
    <string name="text_notification">Notifikasi</string>
    <string name="text_notification_desc">Dapatkan notifikasi terkini</string>
    <string name="text_pengembalian_dana">Pengembalian Dana</string>
    <string name="text_perubahan_jadwal">Perubahan Jadwal</string>
    <string name="text_perubahan_jadwal_desc">Cek status perubahan jadwalmu</string>
    <string name="text_pengaturan">Pengaturan</string>
    <string name="text_keluar">Keluar</string>
    <string name="text_member">Anggota Fly.id</string>
    <string name="text_masuk">Masuk</string>
    <string name="text_fly">Pesan tiket jadi mudah dan cepat!</string>
    <string name="text_fly_desc">Ayo masuk atau registrasi untuk nikmati layanan terbaik Fly.id</string>
    <string name="text_firstname_lastname">%1$s %2$s</string>
    <string name="text_saved_filter">Simpan filter untuk pencarian berikutnya</string>
    <string name="text_pagi">Pagi</string>
    <string name="pagi_time">00:00 – 11:59</string>
    <string name="text_departure_time">Waktu Keberangkatan</string>
    <string name="text_siang">Siang</string>
    <string name="siang_time">12:00 – 14:59</string>
    <string name="text_sore">Sore</string>
    <string name="sore_time">15:00 - 17:59</string>
    <string name="text_malam">Malam</string>
    <string name="malam_time">18:00 - 23:59</string>
    <string name="text_harga">Harga</string>
    <string name="text_harga_min">harga min</string>
    <string name="text_harga_max">harga max</string>
    <string name="text_maskapai">Maskapai</string>
    <string name="text_fasilitas">Fasilitas</string>
    <string name="text_bagasi">Bagasi</string>
    <string name="text_refund_reschedule"><![CDATA[Refund & Reschedule]]></string>
    <string name="text_simpan">Simpan</string>
    <string name="text_reset">Reset</string>
    <string name="text_filter">Filter</string>
    <string name="text_transaction_wait">Mohon ditunggu ya…</string>
    <string name="text_transaction_process">Pembayaranmu sedang diproses</string>
    <string name="text_payment_success">Pembayaran berhasil</string>
    <string name="text_eticket_available">E-tiketmu sudah terbit!\n Lihat dan selamat menikmati perjalananmu</string>
    <string name="text_oke">Oke</string>
    <string name="text_status_pembayaran">Status Pembayaran</string>
    <string name="text_unduh_bukti_pembayaran">Unduh Bukti Pembayaran</string>
    <string name="text_kembali_ke_beranda">Kembali ke Beranda</string>
    <string name="text_sukses">Sukses</string>
    <string name="text_payment_method">Metode Pembayaran</string>
    <string name="text_kode_transaksi">Kode Transaksi</string>
    <string name="text_total_harga">Total Harga</string>
    <string name="text_total_tiket">Total Tiket</string>
    <string name="text_status">Status</string>
    <string name="text_already_have_account">Sudah punya akun? Login dulu yuk!</string>
    <string name="text_register_account">Atau registrasi jika belum punya akun</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_filled_data">Isi Data</string>
    <string name="text_detail_order">Detail Pemesanan</string>
    <string name="text_detail_order_with_value">Detail Pemesanan %1$s</string>
</resources>