<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_regist_title"
        style="@style/TextSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/welcome_register_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_regist_subtitle"
        style="@style/TextSemiBold"
        android:layout_width="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_register_subtitle"
        android:textColor="#C2C2C2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/welcome_regist_title"
        app:layout_constraintTop_toBottomOf="@+id/welcome_regist_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name_regist_title"
        style="@style/TextSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/name_register_title"
        android:textColor="#3E7BFA"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/welcome_regist_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/welcome_regist_subtitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_regist_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/name_regist_title"
        app:layout_constraintTop_toBottomOf="@+id/name_regist_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_regist_edit_text"
            style="@style/EditTextInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name_register_hint"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/email_regist_title"
        style="@style/TextSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email_login_title"
        android:textColor="#3E7BFA"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/name_regist_input"
        app:layout_constraintTop_toBottomOf="@+id/name_regist_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_regist_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/email_regist_title"
        app:layout_constraintTop_toBottomOf="@+id/email_regist_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_regist_edit_text"
            style="@style/EditTextInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_register_hint"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/phone_regist_title"
        style="@style/TextSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/phone_register_title"
        android:textColor="#3E7BFA"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/name_regist_input"
        app:layout_constraintTop_toBottomOf="@+id/email_regist_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_regist_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/phone_regist_title"
        app:layout_constraintTop_toBottomOf="@+id/phone_regist_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_regist_edit_text"
            style="@style/EditTextInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_register_hint"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/password_regist_title"
        style="@style/TextSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password_login_title"
        android:textColor="#3E7BFA"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/welcome_regist_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/phone_regist_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_regist_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/password_regist_title"
        app:layout_constraintTop_toBottomOf="@+id/password_regist_title"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_regist_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/EditTextInput"
            android:hint="@string/password_login_hint"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/regist_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/register_btn_text"
        style="@style/ButtonApp"
        app:layout_constraintEnd_toEndOf="@+id/password_regist_input"
        app:layout_constraintStart_toStartOf="@+id/password_regist_input"
        app:layout_constraintTop_toBottomOf="@+id/password_regist_input" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/register_navigate_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/regist_btn"
        app:layout_constraintStart_toStartOf="@+id/regist_btn"
        app:layout_constraintTop_toBottomOf="@+id/regist_btn">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/register_text"
            style="@style/TextSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/login_text"
            android:textColor="#C2C2C2"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/register_navigate"
            style="@style/TextSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_navigate"
            android:textColor="#3E7BFA"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>